--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,47 +1,5 @@
 {
-  "docsets_to_publish": [
-    {
-      "docset_name": "E2E_P_Dotnet_2017_9_21_10_18_14",
-      "build_source_folder": "E2E_P_Dotnet_2017_9_21_10_18_14",
-      "build_output_subfolder": "E2E_P_Dotnet_2017_9_21_10_18_14",
-      "locale": "en-us",
-      "monikers": [],
-      "moniker_ranges": [],
-      "open_to_public_contributors": true,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes",
-      "customized_template_paths": [
-        "_dependentPackages/memberpage.plugins/content"
-      ],
-      "customized_tasks": {
-        "docset_prebuild": [
-          "_dependentPackages/ECMA2Yaml/tools/Run.ps1",
-          "_dependentPackages/CommonPlugins/tools/SplitTOC.ps1",
-          "_dependentPackages/CommonPlugins/tools/DiffFolder.ps1"
-        ],
-        "docset_postbuild": [
-          "_dependentPackages/ECMA2Yaml/tools/PostBuild.ps1"
-        ]
-      },
-      "ECMA2Yaml": {
-        "SourceXmlFolder": "E2E_P_Dotnet_2017_9_21_10_18_14/xml",
-        "OutputYamlFolder": "E2E_P_Dotnet_2017_9_21_10_18_14/api",
-        "Flatten": true,
-        "id": "E2E_P_Dotnet_2017_9_21_10_18_14"
-      },
-      "SplitTOC": [
-        "E2E_P_Dotnet_2017_9_21_10_18_14/api/E2E_P_Dotnet_2017_9_21_10_18_14/toc.yml"
-      ],
-      "DiffFolder": [
-        "E2E_P_Dotnet_2017_9_21_10_18_14/api"
-      ]
-    }
-  ],
+  "docsets_to_publish": [],
   "notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
